[tool.poetry]
name = "overload"
version = "0.1.0"
description = "DDOS Tool (Layer 7)"
authors = ["7zx and 8fn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
scapy = "^2.4.5"
wget = "^3.2"
argparse = "^1.4.0"
colorama = "^0.4.5"
humanfriendly = "^10.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
mypy = "^0.982"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
